--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 
         <div id="response-container"></div>
     </div>
-
+    <script
+        src="https://code.jquery.com/jquery-3.4.1.js"
+        integrity="sha256-WpOohJOqMqqyKL9FccASB9O0KwACQJpFTUBLTYOVvVU="
+        crossorigin="anonymous"></script>
     <script src="app.js"></script>
 </body>
 </html>
